<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <!-- <item
        android:id="@+id/changestatus_menu_item"
        android:title="@string/changestatus">
    </item>-->

    <item
        android:id="@+id/action_accept"
        android:icon="@drawable/accept"
        android:title="@string/accept"
        android:visible="false"/>

    <item
        android:id="@+id/action_reject"
        android:icon="@drawable/reject"
        android:title="@string/reject"
        android:visible="false"/>

    <item
        android:id="@+id/action_transfer"
        android:icon="@drawable/transfer_activeglass"
        android:title="@string/tranefer"
        android:visible="false"/>

    <item
        android:id="@+id/action_enrote"
        android:icon="@drawable/enrote"
        android:title="@string/enroute"
        android:visible="false"/>
    <item
        android:id="@+id/action_onsite"
        android:icon="@drawable/onsite"
        android:title="@string/onsite"
        android:visible="false"/>
    <item
        android:id="@+id/action_start"
        android:icon="@drawable/start"
        android:title="@string/start"
        android:visible="false"/>
    <item
        android:id="@+id/action_hold"
        android:icon="@drawable/hold"
        android:title="@string/hold"
        android:visible="false"/>
    <item
        android:id="@+id/action_suspend"
        android:icon="@drawable/suspend"
        android:title="@string/suspend"
        android:visible="false"/>
    <item
        android:id="@+id/action_complete"
        android:icon="@drawable/complete"
        android:title="@string/complete"
        android:visible="false"/>

    <item
        android:id="@+id/operation_menu_item"
        android:title="@string/operation">
    </item>
    <item
        android:id="@+id/comp_menu_item"
        android:title="@string/components">
    </item>
    <item
        android:id="@+id/attach_menu_item"
        android:title="@string/attachments">
    </item>


</menu>